// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`comments.js format 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
type Type = {
  // comment
  +[T in number]: number;
};

type Type = {
  // comment1
  // comment2
  +[T in number]: number;
};

type Type = {
  // comment
  -[T in number]: number;
};

type Type = {
  // comment
  +    [T in number]: number;
};

type Type = {
  // comment
  +     [T in number]: number;
};

type Type = {
  // comment
  +       [T in number]: number;
};

type Type = {
  // comment
  [T in number]: number;
};

type Type = {
  + // foo
  /* bar */ [T in number]: number;
};

type Type<T> = { [K in keyof T]: /** Comment */ B };

type Type<T> = {
  [K in keyof T]: /** Comment */
    B,
};

type Type<T> = { [K in keyof T]: /** Comment */ | B };

type Type<T> = { [K in keyof T] /** Comment */: B | C };

=====================================output=====================================
type Type = {
  // comment
  +[T in number]: number,
};

type Type = {
  // comment1
  // comment2
  +[T in number]: number,
};

type Type = {
  // comment
  -[T in number]: number,
};

type Type = {
  // comment
  +[T in number]: number,
};

type Type = {
  // comment
  +[T in number]: number,
};

type Type = {
  // comment
  +[T in number]: number,
};

type Type = {
  // comment
  [T in number]: number,
};

type Type = {
  + // foo
  [/* bar */ T in number]: number,
};

type Type<T> = { [K in keyof T]: /** Comment */ B };

type Type<T> = {
  [K in keyof T]: /** Comment */ B,
};

type Type<T> = { [K in keyof T]: /** Comment */ B };

type Type<T> = { [K in keyof T /** Comment */]: B | C };

================================================================================
`;

exports[`comments.js format[babel-ts] 1`] = `
"Unexpected token (3:3)
  1 | type Type = {
  2 |   // comment
> 3 |   +[T in number]: number;
    |   ^
  4 | };
  5 |
  6 | type Type = {
Cause: Unexpected token (3:2)"
`;

exports[`comments.js format[oxc-ts] 1`] = `
"Unexpected token (3:3)
  1 | type Type = {
  2 |   // comment
> 3 |   +[T in number]: number;
    |   ^
  4 | };
  5 |
  6 | type Type = {"
`;

exports[`comments.js format[typescript] 1`] = `
"Property or signature expected. (3:3)
  1 | type Type = {
  2 |   // comment
> 3 |   +[T in number]: number;
    |   ^
  4 | };
  5 |
  6 | type Type = {
Cause: Property or signature expected."
`;

exports[`comments.js format[yuku-ts] 1`] = `
"Unexpected token '+' as signature key (3:3)
  1 | type Type = {
  2 |   // comment
> 3 |   +[T in number]: number;
    |   ^
  4 | };
  5 |
  6 | type Type = {"
`;

exports[`mapped-types.js format 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
//@flow

type Mapped = {[key in keyof O]: O[key]};
type MappedLong = {[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]: number};
type MappedWithVariance = {+[key in keyof O]: number};
type MappedWithVarianceLong = {-[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]: number};
type MappedWithPlusOptional = {[key in keyof O]+?: number};
type MappedWithMinusOptional = {[key in keyof O]-?: number};
type MappedWithOptional = {[key in keyof O]?: number};
type MappedWithPlusOptionalLong = {[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]+?: number};
type MappedWithMinusOptionalLong = {[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]-?: number};
type MappedWithOptionalLong = {[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]?: number};
type MappedWithOptionalAndVariance = {+[key in keyof O]+?: number};
type MappedWithOptionalAndVarianceLong = {+[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]+?: number};
type MappedWithComments = {/*comment about variance */+[key /* comment about key name */ in /* comment before source type */ keyof O /* comment after source type */]/* comment about optionality */? /*comment before colon */:number /*comment about the prop type */};

=====================================output=====================================
//@flow

type Mapped = { [key in keyof O]: O[key] };
type MappedLong = {
  [
    key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap
  ]: number,
};
type MappedWithVariance = { +[key in keyof O]: number };
type MappedWithVarianceLong = {
  -[
    key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap
  ]: number,
};
type MappedWithPlusOptional = { [key in keyof O]+?: number };
type MappedWithMinusOptional = { [key in keyof O]-?: number };
type MappedWithOptional = { [key in keyof O]?: number };
type MappedWithPlusOptionalLong = {
  [
    key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap
  ]+?: number,
};
type MappedWithMinusOptionalLong = {
  [
    key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap
  ]-?: number,
};
type MappedWithOptionalLong = {
  [
    key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap
  ]?: number,
};
type MappedWithOptionalAndVariance = { +[key in keyof O]+?: number };
type MappedWithOptionalAndVarianceLong = {
  +[
    key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap
  ]+?: number,
};
type MappedWithComments = {
  /*comment about variance */ +[
    key /* comment about key name */ in /* comment before source type */ keyof O /* comment after source type */ /* comment about optionality */ /*comment before colon */
  ]?: number /*comment about the prop type */,
};

================================================================================
`;

exports[`mapped-types.js format[babel-ts] 1`] = `
"Unexpected token (5:28)
  3 | type Mapped = {[key in keyof O]: O[key]};
  4 | type MappedLong = {[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]: number};
> 5 | type MappedWithVariance = {+[key in keyof O]: number};
    |                            ^
  6 | type MappedWithVarianceLong = {-[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]: number};
  7 | type MappedWithPlusOptional = {[key in keyof O]+?: number};
  8 | type MappedWithMinusOptional = {[key in keyof O]-?: number};
Cause: Unexpected token (5:27)"
`;

exports[`mapped-types.js format[oxc-ts] 1`] = `
"Unexpected token (5:28)
  3 | type Mapped = {[key in keyof O]: O[key]};
  4 | type MappedLong = {[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]: number};
> 5 | type MappedWithVariance = {+[key in keyof O]: number};
    |                            ^
  6 | type MappedWithVarianceLong = {-[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]: number};
  7 | type MappedWithPlusOptional = {[key in keyof O]+?: number};
  8 | type MappedWithMinusOptional = {[key in keyof O]-?: number};"
`;

exports[`mapped-types.js format[typescript] 1`] = `
"Property or signature expected. (5:28)
  3 | type Mapped = {[key in keyof O]: O[key]};
  4 | type MappedLong = {[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]: number};
> 5 | type MappedWithVariance = {+[key in keyof O]: number};
    |                            ^
  6 | type MappedWithVarianceLong = {-[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]: number};
  7 | type MappedWithPlusOptional = {[key in keyof O]+?: number};
  8 | type MappedWithMinusOptional = {[key in keyof O]-?: number};
Cause: Property or signature expected."
`;

exports[`mapped-types.js format[yuku-ts] 1`] = `
"Unexpected token '+' as signature key (5:28)
  3 | type Mapped = {[key in keyof O]: O[key]};
  4 | type MappedLong = {[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]: number};
> 5 | type MappedWithVariance = {+[key in keyof O]: number};
    |                            ^
  6 | type MappedWithVarianceLong = {-[key in keyof AReallyLongNameThatShouldReallyMostDefinitelyCauseALineWrap]: number};
  7 | type MappedWithPlusOptional = {[key in keyof O]+?: number};
  8 | type MappedWithMinusOptional = {[key in keyof O]-?: number};"
`;

exports[`modifiers-and-key-remapping.js format 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// @flow

type ReadonlyMapped<T> = {readonly [K in keyof T]: T[K]};
type AddReadonlyMapped<T> = {+readonly [K in keyof T]+?: T[K]};
type RemoveReadonlyMapped<T> = {-readonly [K in keyof T]-?: T[K]};
type Remapped<T> = {[K in keyof T as \`get\${K}\`]: T[K]};
type LongRemapped<T> = {-readonly [ExtremelyLongPropertyName in keyof T as \`get\${ExtremelyLongPropertyName}\`]-?: T[ExtremelyLongPropertyName]};

type Commented<T> = {
  /* before readonly */ -readonly /* after readonly */ [
    K /* before in */ in /* after in */ keyof T /* before as */ as /* after as */ \`get\${K}\` /* after remapping */
  ] /* before optional */ -? /* before colon */ : /* after colon */ T[K]
};

type LineCommentBeforeOptional<T> = {
  [K in keyof T] // before optional
  -?: T[K]
};
type LineCommentBeforeColon<T> = {
  [K in keyof T] // before colon
  : T[K]
};
type ConstructorValue<T> = {
  [K in keyof T]: new /* after new */ () => T[K]
};

opaque type FlowOnly = mixed;

type BlockCommented<T> = {
  - /* between sign and readonly */ readonly [K in keyof T]: T[K]
};

type LineCommented<T> = {
  - // between sign and readonly
  readonly [K in keyof T]: T[K]
};

=====================================output=====================================
// @flow

type ReadonlyMapped<T> = { readonly [K in keyof T]: T[K] };
type AddReadonlyMapped<T> = { +readonly [K in keyof T]+?: T[K] };
type RemoveReadonlyMapped<T> = { -readonly [K in keyof T]-?: T[K] };
type Remapped<T> = { [K in keyof T as \`get\${K}\`]: T[K] };
type LongRemapped<T> = {
  -readonly [
    ExtremelyLongPropertyName in keyof T as \`get\${ExtremelyLongPropertyName}\`
  ]-?: T[ExtremelyLongPropertyName],
};

type Commented<T> = {
  /* before readonly */ -readonly /* after readonly */ [
    K /* before in */ in /* after in */ keyof T /* before as */ as /* after as */ \`get\${K}\` /* after remapping */ /* before optional */ /* before colon */
  ]-?: /* after colon */ T[K],
};

type LineCommentBeforeOptional<T> = {
  [
    K in keyof T // before optional
  ]-?: T[K],
};
type LineCommentBeforeColon<T> = {
  [
    K in keyof T // before colon
  ]: T[K],
};
type ConstructorValue<T> = {
  [K in keyof T]: new () => /* after new */ T[K],
};

opaque type FlowOnly = mixed;

type BlockCommented<T> = {
  -/* between sign and readonly */ readonly [K in keyof T]: T[K],
};

type LineCommented<T> = {
  -// between sign and readonly
  readonly [K in keyof T]: T[K],
};

================================================================================
`;

exports[`modifiers-and-key-remapping.js format[babel-ts] 1`] = `
"Missing semicolon. (27:7)
  25 | };
  26 |
> 27 | opaque type FlowOnly = mixed;
     |       ^
  28 |
  29 | type BlockCommented<T> = {
  30 |   - /* between sign and readonly */ readonly [K in keyof T]: T[K]
Cause: Missing semicolon. (27:6)"
`;

exports[`modifiers-and-key-remapping.js format[hermes] 1`] = `
"':' or '?' expected in property type annotation (4:40)
  2 |
  3 | type ReadonlyMapped<T> = {readonly [K in keyof T]: T[K]};
> 4 | type AddReadonlyMapped<T> = {+readonly [K in keyof T]+?: T[K]};
    |                                        ^
  5 | type RemoveReadonlyMapped<T> = {-readonly [K in keyof T]-?: T[K]};
  6 | type Remapped<T> = {[K in keyof T as \`get\${K}\`]: T[K]};
  7 | type LongRemapped<T> = {-readonly [ExtremelyLongPropertyName in keyof T as \`get\${ExtremelyLongPropertyName}\`]-?: T[ExtremelyLongPropertyName]};
Cause: ':' or '?' expected in property type annotation (4:39)
type AddReadonlyMapped<T> = {+readonly [K in keyof T]+?: T[K]};
                             ~~~~~~~~~~^"
`;

exports[`modifiers-and-key-remapping.js format[oxc-ts] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found none (27:7)
  25 | };
  26 |
> 27 | opaque type FlowOnly = mixed;
     |       ^
  28 |
  29 | type BlockCommented<T> = {
  30 |   - /* between sign and readonly */ readonly [K in keyof T]: T[K]"
`;

exports[`modifiers-and-key-remapping.js format[typescript] 1`] = `
"Unexpected keyword or identifier. (27:1)
  25 | };
  26 |
> 27 | opaque type FlowOnly = mixed;
     | ^
  28 |
  29 | type BlockCommented<T> = {
  30 |   - /* between sign and readonly */ readonly [K in keyof T]: T[K]
Cause: Unexpected keyword or identifier."
`;

exports[`modifiers-and-key-remapping.js format[yuku-ts] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found 'type' (27:8)
  25 | };
  26 |
> 27 | opaque type FlowOnly = mixed;
     |        ^^^^
  28 |
  29 | type BlockCommented<T> = {
  30 |   - /* between sign and readonly */ readonly [K in keyof T]: T[K]"
`;

exports[`ts-compatibility.js format 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// Tests that on single-line mapped types Flow and TS make the same formatting decisions

type Test = {[key in T]: number};
type Test = {[key in keyof T]: number};
type Test = {[otherKeyName     in keyof T]: number};
type Test = {[key in T]:number};
type Test = {[key in T]+?:number};
type Test = {[key in T]-?:                   number};

=====================================output=====================================
// Tests that on single-line mapped types Flow and TS make the same formatting decisions

type Test = { [key in T]: number };
type Test = { [key in keyof T]: number };
type Test = { [otherKeyName in keyof T]: number };
type Test = { [key in T]: number };
type Test = { [key in T]+?: number };
type Test = { [key in T]-?: number };

================================================================================
`;
